# EpicLang

./: .gitignore  CMakeLists.txt  SimpleLang.g4  binary_ops.cpp  binary_ops.h  byte_code_enum.h  byte_code_enum_translation.cpp  byte_code_enum_translation.h  byte_code_generator.cpp  byte_code_generator.h  byte_code_printer.cpp  byte_code_printer.h  byte_code_types.h  byte_code_vm.cpp  byte_code_vm.h  byte_code_vm_debugger.cpp  byte_code_vm_debugger.h  byte_stack.cpp  byte_stack.h  compiler.cpp  compiler.h  compiler_result.h  compiler_visitor.cpp  compiler_visitor.h  main.cpp  program.cpp  program.h  stack_logger.h  test.cpp  test.sl  unary_ops.cpp  unary_ops.h
